force-app/main/default/objects/Regression_Test_Case__c/Regression_Test_Case__c.object-meta.xml
<CustomObject>
    <description>An individual test case within a regression test suite, defining what to test and how to validate results.</description>
    <label>Regression Test Case</label>
    <nameField>
        <displayFormat>TC-{0000}</displayFormat>
        <label>Test Case Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Regression Test Cases</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>