force-app/main/default/objects/Regression_Test_Case__c/fields/Assertion_Type__c.field-meta.xml
<CustomField>
    <fullName>Assertion_Type__c</fullName>
    <label>Assertion Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Record Exists</fullName>
            </value>
            <value>
                <fullName>Field Value</fullName>
            </value>
            <value>
                <fullName>Record Count</fullName>
            </value>
            <value>
                <fullName>Coverage Threshold</fullName>
            </value>
            <value>
                <fullName>No Error</fullName>
            </value>
            <value>
                <fullName>Custom Script</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>