force-app/main/default/objects/Regression_Test_Case__c/fields/Consecutive_Failures__c.field-meta.xml
<CustomField>
    <fullName>Consecutive_Failures__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Count of consecutive failures for flaky detection</description>
    <label>Consecutive Failures</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>