force-app/main/default/objects/Regression_Test_Case__c/fields/Expected_Violations__c.field-meta.xml
<CustomField>
    <fullName>Expected_Violations__c</fullName>
    <description>Expected number of static analysis violations. If actual matches expected, test passes (acknowledged patterns).</description>
    <inlineHelpText>Set this to the number of known/expected violations. If the actual violation count matches, the test passes instead of failing.</inlineHelpText>
    <label>Expected Violations</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>