force-app/main/default/objects/Regression_Test_Case__c/fields/Last_Result_Status__c.field-meta.xml
<CustomField>
    <fullName>Last_Result_Status__c</fullName>
    <description>Cached status from most recent run</description>
    <label>Last Result Status</label>
    <length>20</length>
    <type>Text</type>
</CustomField>