force-app/main/default/objects/Regression_Test_Case__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <label>Priority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>P0</fullName>
            </value>
            <value>
                <fullName>P1</fullName>
                <default>true</default>
                <label>P1</label>
            </value>
            <value>
                <fullName>P2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>