force-app/main/default/objects/Regression_Test_Case__c/fields/Related_Metadata__c.field-meta.xml
<CustomField>
    <fullName>Related_Metadata__c</fullName>
    <description>Specific metadata component tested</description>
    <label>Related Metadata</label>
    <length>255</length>
    <type>Text</type>
</CustomField>