force-app/main/default/objects/Regression_Test_Case__c/fields/Steps__c.field-meta.xml
<CustomField>
    <fullName>Steps__c</fullName>
    <description>Apex script or CLI command</description>
    <label>Steps</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>