force-app/main/default/objects/Regression_Test_Case__c/fields/Tags__c.field-meta.xml
<CustomField>
    <fullName>Tags__c</fullName>
    <description>Semicolon-delimited tags for flexible grouping</description>
    <label>Tags</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>