force-app/main/default/objects/Regression_Test_Case__c/fields/Target_Object__c.field-meta.xml
<CustomField>
    <fullName>Target_Object__c</fullName>
    <description>sObject this test relates to</description>
    <label>Target Object</label>
    <length>100</length>
    <type>Text</type>
</CustomField>