force-app/main/default/objects/Regression_Test_Case__c/fields/Test_Layer__c.field-meta.xml
<CustomField>
    <fullName>Test_Layer__c</fullName>
    <label>Test Layer</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Deployment</fullName>
            </value>
            <value>
                <fullName>Apex Test</fullName>
            </value>
            <value>
                <fullName>Data Scenario</fullName>
            </value>
            <value>
                <fullName>Static Analysis</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>