force-app/main/default/objects/Regression_Test_Case__c/validationRules/Steps_Required_For_Data_Scenario.validationRule-meta.xml
<ValidationRule>
    <fullName>Steps_Required_For_Data_Scenario</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(Test_Layer__c, 'Data Scenario'), ISBLANK(Steps__c))</errorConditionFormula>
    <errorDisplayField>Steps__c</errorDisplayField>
    <errorMessage>Steps are required for Data Scenario test cases.</errorMessage>
</ValidationRule>