force-app/main/default/objects/Regression_Test_Case__c/listViews/Active_Test_Cases.listView-meta.xml
<ListView>
    <fullName>Active_Test_Cases</fullName>
    <columns>NAME</columns>
    <columns>Title__c</columns>
    <columns>Test_Suite__c</columns>
    <columns>Test_Layer__c</columns>
    <columns>Category__c</columns>
    <columns>Priority__c</columns>
    <columns>Perspective__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Is_Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Active Test Cases</label>
</ListView>