force-app/main/default/objects/Regression_Test_Case__c/listViews/All_Test_Cases.listView-meta.xml
<ListView>
    <fullName>All_Test_Cases</fullName>
    <columns>NAME</columns>
    <columns>Title__c</columns>
    <columns>Test_Suite__c</columns>
    <columns>Test_Layer__c</columns>
    <columns>Category__c</columns>
    <columns>Priority__c</columns>
    <columns>Is_Active__c</columns>
    <columns>Perspective__c</columns>
    <columns>Assertion_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Test Cases</label>
</ListView>