force-app/main/default/objects/Regression_Test_Case__c/listViews/High_Priority_Cases.listView-meta.xml
<ListView>
    <fullName>High_Priority_Cases</fullName>
    <columns>NAME</columns>
    <columns>Title__c</columns>
    <columns>Test_Suite__c</columns>
    <columns>Test_Layer__c</columns>
    <columns>Category__c</columns>
    <columns>Priority__c</columns>
    <columns>Is_Active__c</columns>
    <columns>Expected_Result__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Priority__c</field>
        <operation>equals</operation>
        <value>High</value>
    </filters>
    <label>High Priority Cases</label>
</ListView>